--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 
     <nav class="nav">
         <a href="/" class="nav-logo">
-            <img src="../images/logo/logo.png" alt="The Order Logo" width="32" height="32" style="object-fit: contain; margin-top: 2px;">
+            <img src="/images/logo/logo.png" alt="The Order Logo" width="32" height="32" style="object-fit: contain; margin-top: 2px;">
             The Order Ranked Duels
         </a>
         <div class="nav-menu">
